--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,19 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #121212;
+  color: white;
 }
+
+.text-primary {
+  color: #E0B9E0;
+}
+
+.text-secondary {
+  color: #BCCCE4;
+}
+
+
 
 @layer base {
   :root {
